--- a/example/example.html
+++ b/example/example.html
@@ -44,8 +44,8 @@
             Next, inside your controller, you'll need to define some properties required for the directive to work:
         </p>
         <pre class="prettyprint lang-javascript">angular.extend($scope, {
-    lat: 0, // initial map center latitude
-    lon: 0, // initial map center longitude
+    lat: 55.028936234826, // initial map center latitude
+    lon: 82.927810142519, // initial map center longitude
     zoom: 15 // the zoom level
 });</pre>
         <p>
@@ -76,6 +76,7 @@
                             <input type="number" class="input-mini" id="inputZoom" ng-model="zoom" min="1" max="17">
                         </div>
                     </div>
+
                     <legend>Controls</legend>
                     <div class="control-group">
                         <label class="control-label" for="inputLat">Zoom controls</label>
