--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     zoom: 15 // the zoom level
 });</pre>
         <p>
-            Now, include the <code>&lt;google-map&gt;</code> element in your template:
+            Now, include the <code>&lt;dg-map&gt;</code> element in your template:
         </p>
         <pre class="prettyprint lang-html">&lt;dg-map latitude=&quot;lat&quot; longitude=&quot;lon&quot; zoom=&quot;zoom&quot; style=&quot;height: 500px; width: 500px;&quot;&gt;&lt;/dg-map&gt;</pre>
         <h2>Try it!</h2>
