Add link to GitHub

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 <div class="container">
     <div class="hero-unit">
         <h1>2GIS for Angular.js</h1>
+        <p>Simple to use Angular.js component to work with <a href="http://api.2gis.ru/">2GIS API</a></p>
+        <hr/>
+        <a class="btn-large btn" href="http://github.com/burivuhster/angular-dg-maps">View on Github</a>
     </div>
 
     <h2>Try it!</h2>
