--- a/index.html
+++ b/index.html
@@ -16,9 +16,21 @@
     <script type="text/javascript" src="js/angular-dg-maps.js"></script>
     <script type="text/javascript" src="js/example-controller.js"></script>
 
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-42775262-1', 'burivuhster.github.io');
+        ga('send', 'pageview');
+
+    </script>
 </head>
 <body ng-controller="ExampleController" onload="prettyPrint()">
 <div class="container">
+    <a href="http://github.com/burivuhster/angular-dg-maps"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
+
     <div class="hero-unit">
         <h1>2GIS for Angular.js</h1>
         <p>Simple to use Angular.js component to work with <a href="http://api.2gis.ru/">2GIS API</a></p>
