Static 2GIS maps API

--- a/example/example.html
+++ b/example/example.html
@@ -15,6 +15,13 @@
         latitude="lat"
         longitude="lon"
         zoom="zoom"
-        style="height: 700px; "></dg-map>
+        style="height: 500px; "></dg-map>
+<br/>
+<dg-static-map
+        latitude="55.058883"
+        longitude="82.911182"
+        zoom="15"
+        width="500"
+        height="500"></dg-static-map>
 </body>
 </html>
