--- a/example/example.html
+++ b/example/example.html
@@ -21,6 +21,7 @@
         latitude="55.058883"
         longitude="82.911182"
         zoom="15"
+        markers="[[82.911182, 55.058883, 10], [82.913182, 55.056883]]"
         width="500"
         height="500"></dg-static-map>
 </body>
