--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <title>2GIS for Angular.js</title>
 
-    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css"
+          rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/prettify.css"/>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
@@ -13,14 +14,21 @@
 
     <script type="text/javascript" src="http://maps.api.2gis.ru/1.0"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
-    <script type="text/javascript" src="js/angular-dg-maps.js"></script>
+    <script type="text/javascript" src="js/angular-dg-maps.min.js"></script>
     <script type="text/javascript" src="js/example-controller.js"></script>
 
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-42775262-1', 'burivuhster.github.io');
         ga('send', 'pageview');
@@ -29,35 +37,43 @@
 </head>
 <body ng-controller="ExampleController" onload="prettyPrint()">
 <div class="container">
-    <a href="http://github.com/burivuhster/angular-dg-maps"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
+    <a href="http://github.com/burivuhster/angular-dg-maps"><img
+            style="position: absolute; top: 0; right: 0; border: 0;"
+            src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
 
     <div class="hero-unit">
         <h1>2GIS for Angular.js</h1>
+
         <p>Simple to use Angular.js component to work with <a href="http://api.2gis.ru/">2GIS Maps API</a></p>
         <hr/>
         <a class="btn-large btn" href="http://github.com/burivuhster/angular-dg-maps">View on Github</a>
     </div>
 
     <h2>Try it!</h2>
-    <p>Feel free to play with this example</p>
+
+    <p>Feel free to play with examples below</p>
+
     <div class="row">
         <div class="span6">
             <form class="form-horizontal">
                 <legend>Coordinates</legend>
                 <div class="control-group">
                     <label class="control-label" for="inputLat">Latitude</label>
+
                     <div class="controls">
                         <input type="number" id="inputLat" step="0.01" ng-model="lat">
                     </div>
                 </div>
                 <div class="control-group">
                     <label class="control-label" for="inputLon">Longitude</label>
+
                     <div class="controls">
                         <input type="number" id="inputLon" step="0.01" ng-model="lon">
                     </div>
                 </div>
                 <div class="control-group">
                     <label class="control-label" for="inputZoom">Zoom</label>
+
                     <div class="controls">
                         <input type="number" class="input-mini" id="inputZoom" ng-model="zoom" min="1" max="17">
                     </div>
@@ -66,19 +82,29 @@
                 <legend>Controls</legend>
                 <div class="control-group">
                     <label class="control-label" for="inputLat">Zoom controls</label>
+
                     <div class="controls">
                         <div class="btn-group" data-toggle="buttons-radio">
-                            <button type="button" class="btn" ng-class="zoomControls && 'active btn-success'" ng-click="zoomControls=true">On</button>
-                            <button type="button" class="btn" ng-class="!zoomControls && 'active btn-danger'" ng-click="zoomControls=false">Off</button>
+                            <button type="button" class="btn" ng-class="zoomControls && 'active btn-success'"
+                                    ng-click="zoomControls=true">On
+                            </button>
+                            <button type="button" class="btn" ng-class="!zoomControls && 'active btn-danger'"
+                                    ng-click="zoomControls=false">Off
+                            </button>
                         </div>
                     </div>
                 </div>
                 <div class="control-group">
                     <label class="control-label" for="inputLat">Fullscreen control</label>
+
                     <div class="controls">
                         <div class="btn-group" data-toggle="buttons-radio">
-                            <button type="button" class="btn" ng-class="fullscreenControls && 'active btn-success'" ng-click="fullscreenControls=true">On</button>
-                            <button type="button" class="btn" ng-class="!fullscreenControls && 'active btn-danger'" ng-click="fullscreenControls=false">Off</button>
+                            <button type="button" class="btn" ng-class="fullscreenControls && 'active btn-success'"
+                                    ng-click="fullscreenControls=true">On
+                            </button>
+                            <button type="button" class="btn" ng-class="!fullscreenControls && 'active btn-danger'"
+                                    ng-click="fullscreenControls=false">Off
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -97,8 +123,10 @@
     </div>
 
     <h2>Usage</h2>
+
     <p>
-        Before using angular-dg-maps you must include the main Angular.js library, the 2GIS library and the angular-dg-maps.js script:
+        Before using angular-dg-maps you must include the main Angular.js library, the 2GIS library and the
+        angular-dg-maps.js script:
     </p>
         <pre class="prettyprint lang-html">&lt;script type=&quot;text/javascript&quot; src=&quot;http://maps.api.2gis.ru/1.0&quot;&gt;&lt;/script&gt;
 &lt;script src=&quot;http://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js&quot;&gt;&lt;/script&gt;
@@ -117,9 +145,79 @@
     zoom: 15 // the zoom level
 });</pre>
     <p>
-        Now, include the <code>&lt;google-map&gt;</code> element in your template:
+        Now, include the <code>&lt;dg-map&gt;</code> element in your template:
     </p>
     <pre class="prettyprint lang-html">&lt;dg-map latitude=&quot;lat&quot; longitude=&quot;lon&quot; zoom=&quot;zoom&quot; style=&quot;height: 500px; width: 500px;&quot;&gt;&lt;/dg-map&gt;</pre>
+
+    <h2>Static Map API</h2>
+
+    <p>
+        You can also use more simple <a href="http://api.2gis.ru/doc/maps/static/" target="_blank">Static 2GIS Map API</a>
+    </p>
+    <p>
+        Include the <code>&lt;dg-static-map&gt;</code> element in your template:
+    </p>
+    <pre class="prettyprint lang-html">&lt;dg-static-map
+            latitude=&quot;{{ staticLat }}&quot;
+            longitude=&quot;{{ staticLon }}&quot;
+            zoom=&quot;{{ staticZoom }}&quot;
+            markers=&quot;{{ staticMarkers }}&quot;
+            width=&quot;500&quot;
+            height=&quot;500&quot;
+            &gt;&lt;/dg-static-map&gt;</pre>
+    <p>
+        <code>markers</code> attribute is optional. If you want to add markers on your static map, markers should be array of arrays for each marker.
+    </p>
+    <p>
+        <span class="label label-info">Important</span> Do not forget to set width and height attributes!
+    </p>
+
+
+    <div class="row">
+        <div class="span6">
+            <form class="form-horizontal">
+                <legend>Coordinates</legend>
+                <div class="control-group">
+                    <label class="control-label">Latitude</label>
+
+                    <div class="controls">
+                        <span class="input uneditable-input">{{ staticLat }}</span>
+                    </div>
+                </div>
+                <div class="control-group">
+                    <label class="control-label">Longitude</label>
+
+                    <div class="controls">
+                        <span class="input uneditable-input">{{ staticLon }}</span>
+                    </div>
+                </div>
+                <div class="control-group">
+                    <label class="control-label">Zoom</label>
+
+                    <div class="controls">
+                        <span class="input uneditable-input">{{ staticZoom }}</span>
+                    </div>
+                </div>
+
+                <legend>Markers</legend>
+                <div class="control-group">
+                    <ul>
+                        <li ng-repeat="marker in staticMarkers">{{ marker | json }}</li>
+                    </ul>
+                </div>
+            </form>
+        </div>
+        <div class="span6">
+            <dg-static-map
+                    latitude="staticLat"
+                    longitude="staticLon"
+                    zoom="staticZoom"
+                    markers="staticMarkers"
+                    width="500"
+                    height="500"
+                    ></dg-static-map>
+        </div>
+    </div>
 </div>
 </body>
 
