--- a/index.html
+++ b/index.html
@@ -166,6 +166,18 @@
             height=&quot;500&quot;
             &gt;&lt;/dg-static-map&gt;</pre>
     <p>
+    <p>
+        You can also bind attribute values to current scope properties, as it's done on this page:
+    </p>
+    <pre class="prettyprint lang-html">&lt;dg-static-map
+            latitude=&quot;staticLat&quot;
+            longitude=&quot;staticLon&quot;
+            zoom=&quot;staticZoom&quot;
+            markers=&quot;staticMarkers&quot;
+            width=&quot;500&quot;
+            height=&quot;500&quot;
+            &gt;&lt;/dg-static-map&gt;</pre>
+    <p>
         <code>markers</code> attribute is optional. If you want to add markers on your static map, markers should be array of arrays for each marker.
     </p>
     <p>
