Add geoclicker attribute

--- a/example/example.html
+++ b/example/example.html
@@ -15,6 +15,7 @@
         latitude="lat"
         longitude="lon"
         zoom="zoom"
+        geoclicker="true"
         style="height: 500px; "></dg-map>
 <br/>
 <dg-static-map
